<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkDaysApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Activities -->
    <string name="title_activity_edit_workday">Edi tWorkday</string>
    <string name="title_activity_add_workday">Add Workday</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- dates for details view -->
    <string name="dates"></string>

    <!-- labels for forms -->
    <string name="date_label">Date:</string>
    <string name="shift_label">Shift:</string>
    <string name="job_label">Job:</string>
    <string name="foreman_name_label">Foreman Name:</string>
    <string name="hours_label">Hours:</string>
    <string name="overtime_hours_label">Overtime Hours:</string>
    <string name="payscale_label">Pay Scale:</string>
    <string name="overtime_payscale_label">Overtime Pay Scale:</string>
    <string name="comment_label">Comment:</string>

    <!-- value variables -->
    <string name="shift_value"></string>
    <string name="job_value"></string>
    <string name="foreman_name_value"></string>
    <string name="hours_value"></string>
    <string name="overtime_hours_value"></string>
    <string name="payscale_value"></string>
    <string name="overtime_payscale_value"></string>
    <string name="comment_value"></string>

    <!-- error text messages -->
    <string name="shift_error_message"></string>
    <string name="job_error_message"></string>
    <string name="foreman_name_error_message"></string>
    <string name="hours_error_message"></string>
    <string name="overtime_hours_error_message"></string>
    <string name="payscale_error_message"></string>
    <string name="overtime_payscale_error_message"></string>
    <string name="comment_error_message"></string>

    <!-- labels for buttons -->
    <string name="add_button">Add New</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="settings_button">Settings</string>
    <string name="generate_csv_button">Generate CSV</string>

    <!-- colors -->
    <color name="error_color">#ff0000</color>
    
    <!-- backup location -->
    <string name="backup_info">Backup is in /data/data/workdaysapp/files/OutputDatabase.csv</string>

</resources>
