<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="left">
        
        <TextView
	        android:id="@+id/date_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/date_label"/>
        <TextView
	        android:id="@+id/date_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
        
	    <TextView
	        android:id="@+id/shift_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/shift_label"/>
	    <TextView
	        android:id="@+id/shift_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/job_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/job_label"/>
	    <TextView
	        android:id="@+id/job_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/foreman_name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/foreman_name_label"/>
	    <TextView
	        android:id="@+id/foreman_name_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/hours_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hours_label"/>
	    <TextView
	        android:id="@+id/hours_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/overtime_hours_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/overtime_hours_label"/>
	    <TextView
	        android:id="@+id/overtime_hours_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/payscale_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/payscale_label"/>
	    <TextView
	        android:id="@+id/payscale_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/overtime_payscale_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/overtime_payscale_label"/>
	    <TextView
	        android:id="@+id/overtime_payscale_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	    <TextView
	        android:id="@+id/comment_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/comment_label"/>
	    <TextView
	        android:id="@+id/comment_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"/>
	    
	   	<Button
	   	    android:id="@+id/edit_button"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content"
	   	    android:onClick="onClick"
	   	    android:text="@string/edit_button"/>
	   	<Button
	   	    android:id="@+id/delete_button"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content"
	   	    android:onClick="onClick"
	   	    android:text="@string/delete_button"/>
    </LinearLayout>
</RelativeLayout>
