<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditWorkdayActivity" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
            
            <DatePicker
		        android:id="@+id/date_picker_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/date_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
            <TextView
		        android:id="@+id/shift_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/shift_label" />
		    <EditText
		        android:id="@+id/shift_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/shift_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/job_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/job_label" />
		    <EditText
		        android:id="@+id/job_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/job_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/foreman_name_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/foreman_name_label" />
		    <EditText
		        android:id="@+id/foreman_name_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/foreman_name_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/hours_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hours_label" />
		    <EditText
		        android:id="@+id/hours_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/hours_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/overtime_hours_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/overtime_hours_label" />
		    <EditText
		        android:id="@+id/overtime_hours_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/overtime_hours_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/payscale_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payscale_label" />
		    <EditText
		        android:id="@+id/payscale_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/payscale_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/overtime_payscale_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/overtime_payscale_label" />
		    <EditText
		        android:id="@+id/overtime_payscale_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/overtime_payscale_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <TextView
		        android:id="@+id/comment_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/comment_label" />
		    <EditText
		        android:id="@+id/comment_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		    <TextView
                android:id="@+id/comment_error_message"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <Button
		        android:id="@+id/save_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:onClick="onClick"
		        android:text="@string/save_button" />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
